[gd_scene load_steps=20 format=2]

[ext_resource path="res://gfx/keeper.png" type="Texture" id=1]
[ext_resource path="res://hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Keeper.gd" type="Script" id=3]
[ext_resource path="res://hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/enemy_hit.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/boing2.wav" type="AudioStream" id=6]
[ext_resource path="res://gfx/keeper_die.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 18.4597
height = 2.95045

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.99014
height = 12.4914

[sub_resource type="CapsuleShape2D" id=7]
radius = 10.3218
height = 6.77692

[sub_resource type="CircleShape2D" id=8]
radius = 68.6903

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), null ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="Keeper" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 19
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
playing = true

[node name="hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -7.62939e-06, 3.648 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.280617, 3.92861 )
shape = SubResource( 6 )

[node name="hitbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 4.15816 )
shape = SubResource( 7 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.432

[node name="Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.324

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HuntArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 6

[node name="HuntShape" type="CollisionShape2D" parent="HuntArea"]
position = Vector2( -0.841843, 4.20923 )
shape = SubResource( 8 )

[node name="DieAnimation" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 12 )
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="HuntArea" to="." method="_on_HuntArea_body_entered"]
[connection signal="body_exited" from="HuntArea" to="." method="_on_HuntArea_body_exited"]
